[package]
name = "iced_core"
description = "The essential ideas of iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
a11y = ["iced_accessibility"]
wayland = ["iced_accessibility?/accesskit_unix", "sctk"]

[dependencies]
bitflags.workspace = true
log.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
num-traits.workspace = true
sctk.workspace = true
sctk.optional = true
palette.workspace = true
palette.optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant.workspace = true

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true

[dev-dependencies]
approx = "0.5"
[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
