[package]
name = "iced_core"
version = "0.10.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "The essential concepts of Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
a11y = ["iced_accessibility"]
wayland = ["iced_accessibility?/accesskit_unix", "sctk"]

[dependencies]
bitflags = "1.2"
thiserror = "1"
log = "0.4.17"
twox-hash = { version = "1.5", default-features = false }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "2e9bf9f", optional = true }

[dependencies.palette]
version = "0.7"
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["serde_derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[dev-dependencies]
approx = "0.5"
[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
