[package]
name = "iced_runtime"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A renderer-agnostic runtime for Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
debug = []
a11y = ["iced_accessibility", "iced_core/a11y"]
wayland = ["iced_accessibility?/accesskit_unix", "iced_core/wayland", "sctk"]

[dependencies]
thiserror = "1"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "c9940f4", optional = true }

[dependencies.iced_core]
version = "0.10"
path = "../core"

[dependencies.iced_futures]
version = "0.7"
path = "../futures"
features = ["thread-pool"]

[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
