[package]
name = "iced_sctk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["iced_runtime/debug"]
system = ["sysinfo"]
application = []
a11y = ["iced_accessibility", "iced_runtime/a11y"]
input_method = ["calloop", "xkbcommon/wayland", "bytemuck", "pkg-config", 
  "xkeysym/bytemuck", "wayland-protocols-misc/client", "log", "tempfile"]
virtual_keyboard = ["wayland-protocols-misc/client"]
clipboard = []

[dependencies]
tracing = "0.1"
thiserror = "1.0"
sctk.workspace = true
wayland-protocols.workspace = true
wayland-protocols-misc.workspace = true
window_clipboard.workspace = true
# sctk = { package = "smithay-client-toolkit", path = "../../fork/client-toolkit/" }
raw-window-handle = "0.6"
enum-repr = "0.2"
futures = "0.3"
wayland-backend = {version = "0.3.1", features = ["client_system"]}
float-cmp = "0.9"
xkbcommon-dl = "0.4.1"
xkbcommon = { version = "0.7", features = ["wayland"] }
itertools = "0.12"
xkeysym = "0.2.0"
lazy_static = "1.4.0"
bytemuck = { version = "1.14.0", optional = true }
calloop = { version = "0.12.3", optional = true }
tempfile = { version = "3.8.1", optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[dependencies.iced_runtime]
path = "../runtime"
features = ["wayland", "multi-window"]

[dependencies.iced_style]
path = "../style"

[dependencies.iced_graphics]
path = "../graphics"

[dependencies.iced_futures]
path = "../futures"

[dependencies.sysinfo]
version = "0.28"
optional = true

[dependencies.iced_accessibility]
path = "../accessibility"
optional = true
features = ["accesskit_unix"]
