[package]
name = "iced_widget"
version = "0.1.3"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "The built-in widgets for Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced_widget"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
lazy = ["ouroboros"]
image = ["iced_renderer/image"]
svg = ["iced_renderer/svg"]
canvas = ["iced_renderer/geometry"]
qr_code = ["canvas", "qrcode"]
a11y = ["iced_accessibility"]
wayland = ["sctk"]

[dependencies]
unicode-segmentation = "1.6"
num-traits = "0.2"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "dc8c4a0", optional = true }
thiserror = "1"

[dependencies.iced_runtime]
version = "0.1"
path = "../runtime"

[dependencies.iced_renderer]
version = "0.1"
path = "../renderer"

[dependencies.iced_style]
version = "0.9"
path = "../style"

[dependencies.ouroboros]
version = "0.17"
optional = true

[dependencies.qrcode]
version = "0.12"
optional = true
default-features = false

[dependencies.iced_accessibility]
version = "0.1.0"
path = "../accessibility"
optional = true
[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
